<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/textViewSelecteerUwSnelheid"
        android:id="@+id/textViewSelecteerUwSnelheid"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seekBarSnelheid"
        android:layout_below="@+id/textViewSelecteerUwSnelheid"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_alignParentEnd="true"
        android:max="200"
        android:indeterminate="false"
        android:progress="@android:integer/config_mediumAnimTime" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/textViewSnelheid"
        android:id="@+id/textViewSnelheid"
        android:layout_below="@+id/seekBarSnelheid"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/textViewSelecteerUwReactietijd"
        android:id="@+id/textViewSelecteerUwReactietijd"
        android:layout_below="@+id/textViewSnelheid"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seekBarReactietijd"
        android:layout_below="@+id/textViewSelecteerUwReactietijd"
        android:layout_marginTop="10dp"
        android:layout_alignEnd="@+id/seekBarSnelheid"
        android:layout_alignParentStart="true"
        android:progress="@android:integer/config_mediumAnimTime"
        android:indeterminate="false"
        android:max="10" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/textViewReactietijd"
        android:id="@+id/textViewReactietijd"
        android:layout_alignEnd="@+id/textViewSnelheid"
        android:layout_below="@+id/seekBarReactietijd" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/textViewSelecteerHetWegtype"
        android:id="@+id/textViewSelecteerHetWegtype"
        android:layout_below="@+id/textViewReactietijd"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp" />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/textViewSelecteerHetWegtype"
        android:id="@+id/radioButtonGroup">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioButtonDroog"
            android:id="@+id/radioButtonDroog"
            android:checked="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioButtonNat"
            android:id="@+id/radioButtonNat"
            android:checked="false"
            android:layout_alignParentStart="true" />
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonBereken"
        android:id="@+id/buttonBereken"
        android:layout_below="@+id/radioButtonGroup"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/textViewDeStopafstandIs"
        android:id="@+id/textViewDeStopafstandIs"
        android:layout_below="@+id/buttonBereken"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_alignEnd="@+id/buttonBereken" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textViewResult"
        android:id="@+id/textViewResult"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/textViewSelecteerUwSnelheid"
        android:layout_marginBottom="35dp" />

</RelativeLayout>
